[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/ShopAttackSpeedUpgrade.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/DummyMonster.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/TextBlock.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenery/plant2.png" type="Texture" id=5]
[ext_resource path="res://assets/background.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles.png" type="Texture" id=7]
[ext_resource path="res://assets/objects/bombicon.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/attackspeed.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/coinicon.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/attack.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/shopbanner.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/speed.png" type="Texture" id=16]
[ext_resource path="res://scenes/ui/ShopAttackUpgrade.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Barrier.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/ui/ShopSpeedUpgrade.tscn" type="PackedScene" id=22]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 7, 0, 7 )

[sub_resource type="TileSet" id=7]
0/name = "tiles.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tiles.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tiles.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tiles.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tiles.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tiles.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 32, 32, 7 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 28, 23.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9.5, 15 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.75, 7.5 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -131072, 4, 0, -131067, 4, 0, -65536, 4, 0, -65531, 4, 0, 0, 4, 0, 5, 1610612738, 0, 6, 1610612739, 0, 7, 1610612739, 0, 8, 1610612739, 0, 9, 1610612739, 0, 10, 1610612739, 0, 11, 1610612739, 0, 12, 1610612738, 0, 13, 1610612739, 0, 14, 1610612739, 0, 15, 1610612739, 0, 16, 1610612739, 0, 17, 1610612739, 0, 18, 1610612739, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 65536, 4, 0, 65542, 5, 0, 65550, 5, 0, 65559, 4, 0, 131072, 4, 0, 131095, 4, 0, 196608, 4, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 2, 0, 196620, 536870913, 0, 196621, 0, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 536870916, 0, 262156, 536870917, 0, 262163, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 536870916, 0, 327699, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 1073741827, 0, 393224, 1073741827, 0, 393225, 1073741827, 0, 393226, 1610612739, 0, 393227, 536870913, 0, 393230, 536870913, 0, 393231, 1, 0, 393232, 0, 0, 393233, 1, 0, 393234, 1, 0, 393235, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 5, 0, 458761, 5, 0, 458768, 5, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 4, 0, 458775, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524311, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589847, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0 )

[node name="Barrier" parent="." instance=ExtResource( 18 )]
position = Vector2( 304, 16 )

[node name="Barrier2" parent="." instance=ExtResource( 18 )]
position = Vector2( 304, 128 )

[node name="Barrier3" parent="." instance=ExtResource( 18 )]
position = Vector2( 48, 16 )
rotation = 4.71239

[node name="Barrier4" parent="." instance=ExtResource( 18 )]
position = Vector2( 16, 16 )
rotation = 4.71239

[node name="Player" parent="." instance=ExtResource( 21 )]
position = Vector2( 125, 151 )

[node name="CoinIcon" type="TextureRect" parent="."]
margin_left = 261.0
margin_top = 167.0
margin_right = 301.0
margin_bottom = 207.0
texture = ExtResource( 13 )

[node name="CoinsText" parent="." instance=ExtResource( 4 )]
position = Vector2( 275, 171 )
text = "Coins: 0"
upper_padding = 2
lower_padding = 1
font = "ui_medium"

[node name="BombIcon" type="TextureRect" parent="."]
margin_left = 212.0
margin_top = 167.0
margin_right = 252.0
margin_bottom = 207.0
texture = ExtResource( 8 )

[node name="BombText" parent="." instance=ExtResource( 4 )]
position = Vector2( 228, 171 )
text = "Coins: 0"
upper_padding = 2
lower_padding = 1
font = "ui_medium"

[node name="AttackIcon" type="TextureRect" parent="."]
margin_left = 102.0
margin_top = 167.0
margin_right = 142.0
margin_bottom = 207.0
texture = ExtResource( 14 )

[node name="AttackText" parent="." instance=ExtResource( 4 )]
position = Vector2( 120, 171 )
text = "Coins: 0"
upper_padding = 2
lower_padding = 1
font = "ui_medium"

[node name="AttackSpeedIcon" type="TextureRect" parent="."]
margin_left = 135.0
margin_top = 167.0
margin_right = 175.0
margin_bottom = 207.0
texture = ExtResource( 12 )

[node name="AttackSpeedText" parent="." instance=ExtResource( 4 )]
position = Vector2( 151, 171 )
text = "Coins: 0"
upper_padding = 2
lower_padding = 1
font = "ui_medium"

[node name="SpeedIcon" type="TextureRect" parent="."]
margin_left = 176.0
margin_top = 167.0
margin_right = 216.0
margin_bottom = 207.0
texture = ExtResource( 16 )

[node name="SpeedText" parent="." instance=ExtResource( 4 )]
position = Vector2( 191, 171 )
text = "Coins: 0"
upper_padding = 2
lower_padding = 1
font = "ui_medium"

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 130.0
margin_top = 33.0
margin_right = 170.0
margin_bottom = 73.0
texture = ExtResource( 5 )

[node name="ShopBanner" type="TextureRect" parent="."]
margin_left = 239.0
margin_top = 48.0
margin_right = 290.0
margin_bottom = 88.0
texture = ExtResource( 15 )

[node name="ShopItem" parent="." instance=ExtResource( 17 )]
position = Vector2( 225, 57 )
base_cost = 1
cost_multiplier = 2.0
max_level = 5

[node name="ShopItem2" parent="." instance=ExtResource( 2 )]
position = Vector2( 252, 57 )
base_cost = 1
cost_multiplier = 2.0
max_level = 5

[node name="ShopItem3" parent="." instance=ExtResource( 22 )]
position = Vector2( 278, 57 )
base_cost = 1
max_level = 5

[node name="WalkArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WalkArea"]
position = Vector2( 204, 135.5 )
shape = SubResource( 8 )

[node name="ShopArea" type="Area2D" parent="."]
position = Vector2( 210, 68 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopArea"]
position = Vector2( 28, 13 )
shape = SubResource( 9 )

[node name="Dummy" parent="." instance=ExtResource( 3 )]
position = Vector2( 226, 34 )

[node name="DummyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DummyArea"]
position = Vector2( 231.25, 40.5 )
shape = SubResource( 10 )

[connection signal="body_entered" from="WalkArea" to="." method="_on_WalkArea_body_entered"]
[connection signal="body_entered" from="ShopArea" to="." method="_on_ShopArea_body_entered"]
[connection signal="body_entered" from="DummyArea" to="." method="_on_DummyArea_body_entered"]
[connection signal="body_exited" from="DummyArea" to="." method="_on_DummyArea_body_exited"]
